Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8374

[R] Table to vector of DictonaryType will error when Arrays don't have the same Dictionary per array

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • 1.0.0
    • R

    Description

      The conversion should accommodate Unifying the dictionary before converting, otherwise the indices are simply broken

      Attachments

        Issue Links

          Activity

            People

              romainfrancois Romain Francois
              fsaintjacques Francois Saint-Jacques
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 20m
                  2h 20m