ARROW-8374 [R]: Table to vector of DictonaryType will error when Arrays don't have the same Dictionary per array

This needs some testing:

``` r
library(arrow, warn.conflicts = FALSE)

f1 <- factor(c("a"), levels = c("a", "b"))
f2 <- factor(c("c"), levels = c("c", "d"))

ca <- ChunkedArray$create(f1, f2)
ca$as_vector()
#> [1] a c
#> Levels: a b c d
ca$type
#> DictionaryType
#> dictionary<values=string, indices=int8>

tab <- Table$create(
  record_batch(f = f1),
  record_batch(f = f2)
)
tab
#> Table
#> 2 rows x 1 columns
#> $f <dictionary<values=string, indices=int8>>
df <- as.data.frame(tab)
df
#> # A tibble: 2 x 1
#>   f
#>   <fct>
#> 1 a
#> 2 c
df$f
#> [1] a c
#> Levels: a b c d
```

<sup>Created on 2020-07-06 by the [reprex package](https://reprex.tidyverse.org) (v0.3.0.9001)</sup>

Closes #7645 from romainfrancois/ARROW-8374/Dictionary_unification

Lead-authored-by: Romain Francois <romain@rstudio.com>
Co-authored-by: Romain François <romain@rstudio.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>